--- a/Smart_Agriculture_STM32F1.uvprojx
+++ b/Smart_Agriculture_STM32F1.uvprojx
@@ -505,6 +505,11 @@
               <FileType>1</FileType>
               <FilePath>.\Mylib\Uart.c</FilePath>
             </File>
+            <File>
+              <FileName>debug.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Mylib\debug.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
